--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
 PORT=4001
-MONGODBURI="mongodb://localhost:27017/bookstore2"
+MONGODBURI="mongodb+srv://prince1309:prince123@cluster0.prxpiyy.mongodb.net/?appName=Cluster0"
